Initial commit for Inventory-Service